--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/home.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/home.html
@@ -6,6 +6,19 @@
 	
 	<body>
 		<div class="container">
+			<div class="jumbotron jumbotron-fluid mb-0">
+				<h1 class="display-4">Meus Pedidos</h1>
+			</div>
+		
+			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
+			    <div class="navbar-nav">
+			        <a class="nav-link" href="#">Todos <span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="#">Aguardando</a>
+			        <a class="nav-link" href="#">Aprovado</a>
+			        <a class="nav-link disabled" href="#">Entregue</a>
+			    </div>
+			    <button href="/pedido/formulario" class="btn btn-outline-secondary my-2 my-sm-0">Novo</button>
+			</nav>
 			<div class="card" th:each="pedido: ${pedidos}">
 				<div class="card-header" th:text="${pedido.nome}">Nome do produto</div>
 				
