--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/home.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/home.html
@@ -1,14 +1,13 @@
 <html>
-	<head>
-		<meta charset="UTF-8"/>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<head th:replace="~{base :: head}">
+		
 	</head>
 	
 	<body>
+		<div th:replace="~{base :: logo}"> </div>
+		
 		<div class="container">
-			<div class="jumbotron jumbotron-fluid mb-0">
-				<h1 class="display-4">Meus Pedidos</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Meus Pedidos')}"> </div>
 		
 			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
 			    <div class="navbar-nav">
@@ -19,7 +18,8 @@
 			    </div>
 			    <button href="/pedido/formulario" class="btn btn-outline-secondary my-2 my-sm-0">Novo</button>
 			</nav>
-			<div class="card" th:each="pedido: ${pedidos}">
+			
+			<div class="card mb-3" th:each="pedido: ${pedidos}">
 				<div class="card-header" th:text="${pedido.nome}">Nome do produto</div>
 				
 				<div class="card-body">
@@ -33,9 +33,9 @@
 							<div>Produto</div>
 							<div class="form-control" th:text="${pedido.urlProduto}">Url do produto</div>
 							
-							<div>DescriÃ§Ã£o</div>
+							<div>Descrição</div>
 							<div>
-								<textarea class="form-control" th:text="${pedido.descricao}">DescriÃ§Ã£o do pedido</textarea>
+								<textarea class="form-control" th:text="${pedido.descricao}">Descrição do pedido</textarea>
 							</div>
 						</div>
 						<div class="col-12 col-sm-4">
