--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/pedido/formulario.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/pedido/formulario.html
@@ -1,14 +1,13 @@
 <html>
-	<head>
-		<meta charset="UTF-8"/>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<head th:replace="~{base :: head}">
+		
 	</head>
 	
 	<body>
+		<div th:replace="~{base :: logo}"> </div>
+		
 		<div class="container">
-			<div class="jumbotron jumbotron-fluid mb-0">
-				<h1 class="display-4">Novo Pedido</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Novo Pedido')}"> </div>
 			<div class="mt-3">
 				<form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
 					<div class="form-group">
