07/04 - Spring Security Start

--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/base.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/base.html
@@ -16,7 +16,11 @@
 
 <div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
 	<span class="logo">mudi</span>
-	<span class="mt-3">login</span>
+	<span class="mt-3">
+		<a sec:authorize="!isAuthenticated()" class="text-light" href="/login">login</a>
+		<a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()" class="text-light" href="#">logout</a>
+		<form id="form-login" th:action="@{/logout}" method="post"></form>
+	</span>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron jumbotron-fluid mb-0">
