09/04 - Auth provider, user control and context navigation

--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/base.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/base.html
@@ -14,15 +14,28 @@
 	</style>
 </head>
 
-<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-	<span class="logo">mudi</span>
-	<span class="mt-3">
-		<a sec:authorize="!isAuthenticated()" class="text-light" href="/login">login</a>
-		<a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()" class="text-light" href="#">logout</a>
-		<form id="form-login" th:action="@{/logout}" method="post"></form>
-	</span>
+<div th:fragment="logo" class="">
+	
+	<div class="row logo-container mb-3 p-3 d-flex justify-content-between">
+		<span class="logo">mudi</span>
+		<span class="mt-3 mr-2">
+			<a sec:authorize="!isAuthenticated()" class="text-light" href="/login">login</a>
+			<a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()" class="text-light" href="#">logout</a>
+			<form id="form-login" th:action="@{/logout}" method="post"></form>
+		</span>
+	</div>
+	
+	<div class="row" sec:authorize="isAuthenticated()">
+		<div class="col">
+			<nav class="nav">
+			  <a class="nav-link" th:href="@{/home}">Home</a>
+			  <a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+			</nav>
+		</div>
+	</div>
+
 </div>
 
-<div th:fragment="titulo(valor)" class="jumbotron jumbotron-fluid mb-0">
+<div th:fragment="titulo(valor)" class="jumbotron jumbotron-fluid mb-2 mt-2">
 	<h1 class="display-4" th:text="${valor}"></h1>
 </div>
