--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/home.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/home.html
@@ -7,25 +7,12 @@
 		<div th:replace="~{base :: logo}"> </div>
 		
 		<div class="container">
-			<div th:replace="~{base :: titulo('Meus Pedidos')}"> </div>
-		
-			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
-			    <div class="navbar-nav">
-			        <a th:classappend="${status}== null ? 'active'"class="nav-link nav-item" href="/home">Todos <span class="sr-only">(current)</span></a>
-			        <a th:classappend="${status}== 'aguardando' ? 'active'" class="nav-link nav-item" href="/home/aguardando">Aguardando</a>
-			        <a th:classappend="${status}== 'aprovado' ? 'active'" class="nav-link nav-item" href="/home/aprovado">Aprovado</a>
-			        <a th:classappend="${status}== 'entregue' ? 'active'" class="nav-link nav-item" href="/home/entregue">Entregue</a>
-			    </div>
-			    <button href="/pedido/formulario" class="btn btn-outline-secondary my-2 my-sm-0">Novo</button>
-			</nav>
-			
+			<div th:replace="~{base :: titulo('Últimos Pedidos')}"> </div>
+				
 			<div class="card mb-3" th:each="pedido: ${pedidos}">
 			
-				<th:block th:switch="${pedido.status.name()}">
-								<div th:case="AGUARDANDO" class="card-header alert-warning" th:text="${pedido.nome}">Nome do produto</div>
-								<div th:case="APROVADO" class="card-header alert-success" th:text="${pedido.nome}">Nome do produto</div>
-								<div th:case="ENTREGUE" class="card-header alert-dark" th:text="${pedido.nome}">Nome do produto</div>
-				</th:block>
+				<div class="card-header alert-dark" th:text="${pedido.nome}">Nome do produto</div>
+
 				
 				<div class="card-body">
 					<div class="row">
