11/04 - Paging, Cache, Rest Controller, Rest w/ Spring and MVC

--- a/Projetos/Spring MVC/mudi/src/main/resources/templates/usuario/home.html
+++ b/Projetos/Spring MVC/mudi/src/main/resources/templates/usuario/home.html
@@ -38,9 +38,9 @@
 							<div>Produto</div>
 							<div class="form-control" th:text="${pedido.urlProduto}">Url do produto</div>
 							
-							<div>Descrição</div>
+							<div>DescriÃ§Ã£o</div>
 							<div>
-								<textarea class="form-control" th:text="${pedido.descricao}">Descrição do pedido</textarea>
+								<textarea class="form-control" th:text="${pedido.descricao}">DescriÃ§Ã£o do pedido</textarea>
 							</div>
 						</div>
 						<div class="col-12 col-sm-4">
